<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <NumberPicker
        android:id="@+id/radius_picker"
        style="@style/ListItemMargins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/NumberPickerStyle"
        android:layout_margin="5dp"/>

    <NumberPicker
        android:id="@+id/units_picker"
        style="@style/ListItemMargins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/NumberPickerStyle"
        android:layout_margin="5dp" />

</LinearLayout>