<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="2dp"
    android:background="@color/white">

    <View style="@style/HorizontalDivider"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/button_switch"
            style="@style/BlueSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"/>

    </RelativeLayout>

    <View style="@style/HorizontalDivider"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
