<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="fragment_0" type="id"/>
    <item name="fragment_1" type="id"/>
    <item name="fragment_2" type="id"/>
    <item name="fragment_3" type="id"/>
    <item name="fragment_4" type="id"/>
</resources>
